fix styling flaws : hero content overflowing from the container (section element because of the div.layer element), add a bigger padding to the article content elements, always set the showMobileMenu to false on navigation so the menu is hidden

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -106,10 +106,3 @@ article {
     }
 }
 
-
-/* MEDIA QUERIES */
-@media only all and (max-width:425px) {
-    article > * {
-        padding-inline: 1rem;
-    }
-}
