--- a/src/components/article/read/Scrollspy/style.module.css
+++ b/src/components/article/read/Scrollspy/style.module.css
@@ -39,9 +39,3 @@
         padding-bottom: 0;
     }
 }
-
-@media only all and (max-width:425px) {
-    .container {
-        padding-inline: 1rem;
-    }
-}
