--- a/src/components/article/read/style.module.css
+++ b/src/components/article/read/style.module.css
@@ -99,9 +99,3 @@
         bottom: 2rem;
     }
 }
-
-@media only all and (max-width:425px) {
-    .list__articles {
-        padding-inline: 1rem;
-    }
-}
