--- a/src/components/landing/hero/style.module.css
+++ b/src/components/landing/hero/style.module.css
@@ -6,15 +6,6 @@
     position: relative;
 }
 
-.layer {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 .content {
     width: 800px;
     margin: auto;
